# Anti-Venom

./: .env.example  .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
antivenom/: __init__.py  benchmark.py
antivenom/audit/: __init__.py  audit_log.py  events.py  quarantine.py
antivenom/cache/: __init__.py  hash_cache.py
antivenom/cache/backends/: __init__.py  memory.py  redis.py  sqlite.py
antivenom/cli/: main.py
antivenom/cli/commands/: audit.py  scan.py  serve.py
antivenom/core/: __init__.py  chunk.py  config.py  exceptions.py  finding.py  normalize.py  pipeline.py  report.py  result.py  scanner.py
antivenom/integrations/haystack/: __init__.py  component.py
antivenom/integrations/langchain/: __init__.py  transformer.py
antivenom/integrations/llamaindex/: __init__.py  node_processor.py  pipeline_node.py
antivenom/layers/: __init__.py  base.py  canary.py  classifier.py  cross_chunk.py  llm_judge.py  pattern.py  semantic.py  structural.py
antivenom/models/: distilbert.py  embeddings.py  malicious_corpus.py
antivenom/rules/: __init__.py  base_rule.py  loaders.py  registry.py
antivenom/rules/builtin/: adversarial_phrases.py
antivenom/trust/: __init__.py  label.py  manifest.py  policy.py  registry.py  sealer.py  spotlight.py
antivenom/webhook/: proxy.py
scripts/: build_benchmark_dataset.py  build_classifier_dataset.py  train_classifier.py
tests/benchmarks/: run_benchmark.py
tests/integration/: test_classifier_live.py  test_concurrency.py  test_evasion_benchmark.py  test_langchain_integration.py  test_llm_judge_live.py  test_scanner_end_to_end.py  test_scanner_explain.py  test_trust_plane.py
tests/unit/: test_cache_findings.py  test_canary_layer.py  test_chunk.py  test_classifier_layer.py  test_cross_chunk_layer.py  test_findings.py  test_flow_policy.py  test_hash_cache.py  test_llm_judge_layer.py  test_normalize.py  test_pattern_layer.py  test_redis_backend.py  test_report.py  test_result.py  test_robustness.py  test_rules.py  test_scanner.py  test_source_registry.py  test_spotlight.py  test_structural_layer.py  test_trust_label.py  test_trust_sealer.py
