[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "antivenom"
version = "0.3.1"
description = "RAG Corpus Poisoning Detector — scans document chunks for adversarial prompt injections before vector DB storage"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Sajith J", email = "sajithjaganathan7@gmail.com" }]
keywords = ["rag", "security", "prompt-injection", "llm", "vector-database", "ai-security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0"]
structural-nlp = ["spacy>=3.7"]
classifier = ["transformers>=4.40", "torch>=2.1"]
serve = ["fastapi>=0.111", "uvicorn[standard]>=0.30", "httpx>=0.27"]
langchain = ["langchain-core>=0.2"]
llamaindex = ["llama-index-core>=0.10"]
haystack = ["haystack-ai>=2.0"]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "datasets>=2.19",
    "faker>=25.0",
    "langchain-core>=0.2",
]
all = [
    "antivenom[semantic,structural-nlp,classifier,serve,langchain,llamaindex,haystack,redis]",
]

[project.scripts]
antivenom = "antivenom.cli.main:app"

[project.urls]
Homepage = "https://github.com/s4jith/Anti-Venom"
Repository = "https://github.com/s4jith/Anti-Venom"
Issues = "https://github.com/s4jith/Anti-Venom/issues"

[tool.setuptools.packages.find]
include = ["antivenom*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line length handled by formatter, not enforced
    "B008",   # function-call-in-default — this IS the required Typer/FastAPI pattern
    "B905",   # zip() without strict= — lengths are invariant at every call site
    "SIM105", # try/except/pass is clearer than contextlib.suppress for hot paths
]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --tb=short"

[tool.coverage.run]
source = ["antivenom"]
omit = ["tests/*"]
